# MyOpenAIAutomationSystem

./: README.md  pyproject.toml  task_runner.py
src/my_openai_automation_package/: __init__.py  cli.py  config_manager.py  project_manager.py  runner.py
