[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MyOpenAIAutomationPackage"
version = "0.1.0"
description = "Automate running OpenAI-assisted fixes on sandboxed projects"
readme = "README.md"
authors = [
  {name = "Automation System"}
]
requires-python = ">=3.9"
dependencies = [
  "cryptography>=41.0.0",
  "openai>=1.0.0"
]

[project.urls]
Homepage = "https://example.com/MyOpenAIAutomationPackage"

[project.scripts]
MOAIAP = "my_openai_automation_package.cli:main"
